--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -7,8 +7,10 @@ on:
 
 jobs:
   dispara:
-    uses: convictional/trigger-workflow-and-wait
-    with:
-      owner: roselmamendestw
-      repo: gh-repo-b
-      github_token: ${{ secrets.gh_token }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: convictional/trigger-workflow-and-wait@latest
+        with:
+          owner: roselmamendestw
+          repo: gh-repo-b
+          github_token: ${{ secrets.gh_token }}
