--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,7 +9,7 @@ jobs:
   dispara:
     runs-on: ubuntu-latest
     steps:
-      - uses: convictional/trigger-workflow-and-wait@latest
+      - uses: convictional/trigger-workflow-and-wait@1.6.1
         with:
           owner: roselmamendestw
           repo: gh-repo-b
