--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -9,8 +9,9 @@ jobs:
   dispara:
     runs-on: ubuntu-latest
     steps:
-      - uses: convictional/trigger-workflow-and-wait@1.6.5
+      - uses: convictional/trigger-workflow-and-wait@v1.6.5
         with:
           owner: roselmamendestw
           repo: gh-repo-b
           github_token: ${{ secrets.gh_token }}
+
