--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - uses: convictional/trigger-workflow-and-wait@v1.6.5
         with:
-          owner: roselmamendestw
+          owner: gh-org-b
           repo: gh-repo-b
           github_token: ${{ secrets.gh_token }}
           workflow_file_name: workflow.yml
